Kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: _{_NAMESPACE_}_
  labels:
    app: myapp

spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp
  type: NodePort
