Kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: _{_NAMESPACE_}_
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: "true"
    # service.beta.kubernetes.io/aws-load-balancer-type: nlb
    alb.ingress.kubernetes.io/scheme: internet-facing # ELB accessible publiquement
    alb.ingress.kubernetes.io/target-type: ip 

spec:
  rules:
    - host: ada70c44bf99b497a8e0fe270d4c6983-141647580.eu-north-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port: 
                  number: 8080
  # tls:
  #   - hosts:
  #       - a4546df27329c4dc5923b69fe459cc47-91b3ca18f5597e2f.elb.eu-north-1.amazonaws.com
  #     secretName: ingress-local-tls
